--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,10 @@
   "dependencies": {
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "@hookform/resolvers": "^3.10.0",
-    "antd": "^5.23.4",
+    "antd": "^5.24.0",
     "axios": "^1.7.9",
-    "next": "15.1.6",
+    "dayjs": "^1.11.13",
+    "next": "^15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
@@ -21,9 +22,9 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/node": "^20.17.18",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
