--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -1,4 +1,5 @@
 version: '3.8'
+
 services:
   postgres:
     image: postgres:14
@@ -11,5 +12,20 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+
+  minio:
+    image: minio/minio
+    container_name: minio
+    environment:
+      MINIO_ROOT_USER: admin
+      MINIO_ROOT_PASSWORD: password123
+    command: server /data --console-address ":9090"
+    ports:
+      - "9000:9000"   
+      - "9090:9090"   
+    volumes:
+      - minio_data:/data 
+
 volumes:
   postgres_data:
+  minio_data:
