--- a/backend/package.json
+++ b/backend/package.json
@@ -21,18 +21,18 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.800.0",
-    "@aws-sdk/s3-request-presigner": "^3.800.0",
+    "@aws-sdk/s3-request-presigner": "^3.812.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.3.0",
-    "@nestjs/core": "^10.0.0",
+    "@nestjs/core": "^11.1.1",
     "@nestjs/mapped-types": "*",
-    "@nestjs/platform-express": "^10.4.17",
+    "@nestjs/platform-express": "^11.1.1",
     "@nestjs/sequelize": "^10.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.7",
     "formidable": "^3.5.3",
-    "multer": "^1.4.5-lts.2",
+    "multer": "^2.0.0",
     "multer-s3": "^3.0.1",
     "node": "^23.11.0",
     "pg": "^8.13.1",
@@ -46,7 +46,7 @@
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
-    "@nestjs/testing": "^10.0.0",
+    "@nestjs/testing": "^11.1.1",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.2",
     "@types/multer": "^1.4.12",
